--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   shimmer: ^3.0.0
   dart_openai: ^5.1.0
   google_mlkit_text_recognition: ^0.10.0
-  aws_s3_client: ^2.0.0
+  aws_signature_v4: ^0.6.7
 
 dev_dependencies:
   flutter_test:
