--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   dart_openai: ^5.1.0
   google_mlkit_text_recognition: ^0.10.0
   aws_signature_v4: ^0.6.7
+  flutter_local_notifications: ^17.1.0
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
