--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   aws_signature_v4: ^0.6.7
   flutter_local_notifications: ^17.1.0
   timezone: ^0.9.2
+  fl_chart: ^0.66.3
 
 dev_dependencies:
   flutter_test:
