--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_local_notifications: ^17.1.0
   timezone: ^0.9.2
   fl_chart: ^0.66.3
+  device_calendar: ^5.0.0
 
 dev_dependencies:
   flutter_test:
