--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: stable
+          cache: true
       - run: flutter pub get
       - run: flutter analyze
+      
       - run: flutter test
