--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   image_picker: ^1.0.7
   path_provider: ^2.1.2
   path: ^1.8.3
+  sqflite: ^2.3.0
+  connectivity_plus: ^4.0.1
   pdf: ^3.10.1
   printing: ^5.11.0
   shared_preferences: ^2.2.2
