--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   timezone: ^0.9.2
   fl_chart: ^0.66.3
   device_calendar: ^5.0.0
+  webview_flutter: ^4.13.0
 
 dev_dependencies:
   flutter_test:
